# Vex-cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: main.yml  release.yml  test.yml
scripts/: arch_package.sh  build_conan.ps1  build_linux.sh  build_windows.ps1  conan_linux.sh  conan_windows.ps1  create_windows_installer.ps1  debian_package.sh  installer_windows.ps1  make_windows_installer.nsi
src/: arguments.cpp  arguments.h  lockfile.cpp  lockfile.h  main.cpp  package.cpp  package.h
src/commands/: add.cpp  add.h  help.cpp  help.h  init.cpp  init.h  install.cpp  install.h  remove.cpp  remove.h
src/utils/: utils.cpp  utils.h  windows_setup.h
tests/: test_add.cpp  test_help.cpp  test_init.cpp  test_install.cpp  test_integration.cpp  test_remove.cpp
